fix: always show scrollbar, move basket accordingly
Ref: SRX-JOVOC6

--- a/services/frontend-service/src/ui/components/ServiceLane/ServiceLane.scss
+++ b/services/frontend-service/src/ui/components/ServiceLane/ServiceLane.scss
@@ -30,6 +30,7 @@ Copyright freiheit.com*/
         // the padding here has to be big enough, so that
         // the border-radius of the whole lane does not break
         padding: 0 4px 0 0;
+        margin-right: 10px;
         border-radius: $border-radius-medium;
         height: $service-lane-header-height;
 
