--- a/services/frontend-service/src/ui/components/SideBar/SideBar.scss
+++ b/services/frontend-service/src/ui/components/SideBar/SideBar.scss
@@ -165,7 +165,7 @@ Copyright freiheit.com*/
 
 .mdc-drawer-sidebar--displayed {
     position: absolute;
-    right: 0;
+    right: 20px;
     top: 0;
     width: $sidebar-width;
 }
